<resources>
    <string name="app_name">BookShelf-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="already_a_user">Already a user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="for_password_min_8_characters_with_atleast_one_number_special_characters_one_lowercase_letter_and_one_uppercase_letter_is_mandatory"><![CDATA[For password, min 8 characters with atleast one number, special characters[!@#$/%&()], one lowercase letter, and one uppercase letter is mandatory.]]></string>
    <string name="created_a_user_now_you_can_login_from_those_credentials">Created a user, now you can login from those credentials</string>
    <string name="username_must_not_be_empty">Username must not be empty!</string>
    <string name="pass_must_not_be_empty">Password must not be empty!</string>
    <string name="title">Title</string>
    <string name="hits">Hits</string>
    <string name="favourites">Favourites</string>
    <string name="lorem5">Lorem ipsum dolor sit amet.</string>
    <string name="sample_hits">123456</string>
    <string name="hits_colon">Hits:</string>
    <string name="login_screen">Login Screen</string>
    <string name="signup_screen">Signup Screen</string>
    <string name="bookshelf">BookShelf</string>
    <string name="book_details">Book Details</string>
    <string name="alias">Alias</string>
    <string name="alias_colon">Alias: </string>
    <string name="updated_on">Updated On:</string>
    <string name="sample_updated">12th june 2013</string>
    <string name="summary_colon">Summary: </string>
    <string name="lorem_300">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis cum deleniti doloribus exercitationem facere facilis incidunt minima molestiae molestias odio odit, provident reiciendis totam voluptates voluptatibus. Ad adipisci consectetur ducimus eos facere harum neque nisi rem, repellendus sequi tempora unde. Ad alias illo ipsam vel voluptates? Blanditiis ducimus minus provident vitae voluptatem. Ad dolore doloremque fugit harum ipsam nihil, nisi odit ratione? At dignissimos eaque enim error, exercitationem facere fugiat iusto labore maiores modi mollitia perferendis unde voluptate. Atque autem distinctio doloremque doloribus, eligendi error facere fuga fugiat illo impedit incidunt inventore ipsam ipsum, libero maxime nemo nihil officia placeat porro quam quidem saepe voluptas? Asperiores aut harum itaque, laboriosam natus necessitatibus numquam obcaecati qui rerum sunt. Beatae culpa dignissimos expedita illo minus molestiae ratione veniam voluptatem. Amet aut autem ducimus eligendi eveniet illo rerum sint voluptatem! Animi deserunt dicta ea, ex explicabo fugiat perferendis unde velit veniam voluptatem. Aperiam architecto aspernatur autem eius enim error fugiat hic iusto maxime mollitia necessitatibus nostrum officia, officiis placeat praesentium, quas quia quibusdam, reprehenderit sunt veniam. Alias commodi cupiditate dicta dignissimos excepturi id magnam perspiciatis quaerat quas vel. Asperiores labore laboriosam modi repudiandae vel voluptates! Ad, animi, architecto asperiores aut blanditiis, consequatur cumque cupiditate dolorum eius eos ex minima nihil obcaecati officia omnis porro quae quaerat quas quasi quisquam quo recusandae rem repudiandae similique soluta sunt velit vero. Blanditiis cum enim eveniet nostrum vitae voluptates. Ab accusantium aliquam aliquid beatae culpa dolorum ducimus ea enim eveniet excepturi facere facilis fugit harum id in ipsa ipsam natus neque nesciunt nostrum omnis placeat praesentium provident quae qui quidem, quod quos rem reprehenderit rerum, soluta sunt tempora unde vel velit veniam voluptate. A aspernatur corporis earum illum labore, mollitia odit, qui quia quidem repellendus sed, veniam vitae voluptatibus! Animi deserunt illo libero, necessitatibus quod saepe ullam?</string>
    <string name="yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="logged_out">Logged out</string>
</resources>