<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".feat_auth.presentation.fragments.LoginFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_sign_up_tv_username"
        style="@style/HeadingTextViewTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_sign_up_til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_tv_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_sign_up_tiet_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_sign_up_tv_password"
        style="@style/HeadingTextViewTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_til_username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_sign_up_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_tv_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_sign_up_tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password" />
    </com.google.android.material.textfield.TextInputLayout>
    <Spinner
        android:id="@+id/fragment_sign_up_sp_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_til_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="@dimen/_8sdp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_sign_up_bt_sign_up"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/_256sdp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_sp_country" />

    <LinearLayout
        android:id="@+id/fragment_sign_up_ll_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_bt_sign_up">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_sign_up_tv_already_a_user"
            style="@style/DefaultTextViewtheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/already_a_user" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_sign_up_tv_login"
            style="@style/DefaultTextViewtheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textColor="?colorAccent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>