<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp"
        tools:context=".feat_auth.presentation.fragments.LoginFragment">

        <TextView
            android:id="@+id/fragment_login_tv_login_screen"
            style="@style/HeadingTopBarTextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_screen"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/color444444"
            app:layout_constraintTop_toBottomOf="@id/fragment_login_tv_login_screen" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_login_tv_username"
            style="@style/HeadingTextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/username"
            app:layout_constraintTop_toBottomOf="@id/fragment_login_tv_login_screen" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_login_til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/fragment_login_tv_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_tiet_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/_12sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_login_tv_password"
            style="@style/HeadingTextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@id/fragment_login_til_username" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_login_til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/fragment_login_tv_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/_12sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_login_bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:minWidth="@dimen/_256sdp"
            android:minHeight="@dimen/_40sdp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_login_til_password" />

        <LinearLayout
            android:id="@+id/fragment_login_ll_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_login_bt_login">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_login_tv_already_a_user"
                style="@style/DefaultTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/not_registered_yet" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_login_tv_sign_up"
                style="@style/DefaultTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@android:color/transparent"
                android:text="@string/sign_up"
                android:textColor="?colorAccent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
