<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/book_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    android:background="@drawable/portrait_bg_event"
    android:paddingBottom="@dimen/_4sdp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/book_item_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/sample_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/book_item_tv_title"
        app:shapeAppearanceOverlay="@style/RoundedImageView" />

    <ImageView
        android:id="@+id/book_item_iv_fav"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_margin="@dimen/_8sdp"
        android:elevation="@dimen/_20sdp"
        android:src="@drawable/iconmonstr_favorite_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/_878787" />

    <TextView
        android:id="@+id/book_item_tv_title"
        style="@style/_12spTextViewTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:maxLines="2"
        app:layout_constraintBottom_toTopOf="@id/book_item_ll_hits"
        android:text="@string/lorem5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_item_iv" />

    <LinearLayout
        android:id="@+id/book_item_ll_hits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_item_tv_title">

        <TextView
            android:id="@+id/book_item_tv_heading_hits"
            style="@style/DefaultTextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hits_colon"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/book_item_tv_hits"
            style="@style/DefaultTextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_hits" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>